<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Do Today</string>
    <string name="tagline">Have fun. Get stuff done.</string>
    <string name="tagline_styled"><b><i>Have fun. Get stuff done.</i></b></string>
    
    <!-- action bar -->
    <string name="action_new_list">Add a new list</string>
    <string name="action_choose_list">Choose List</string>
    <string name="action_goto_today">Today</string>
    
    <!--  todo activity (main activity) -->
    <string name="load_progress_title">Loading your stuff&#8230;</string>
    <string name="load_progress_description">@string/tagline_styled</string>
    
    <!-- sorting bar -->
    <string name="sorted_by_due_date">Sorted by Due Date</string>
    <string name="sorted_by_priority">Sorted by Points</string>
    <string name="sorted_by_importance">Sorted by Importance</string>
    <string name="sorted_by_name">Sorted by Name</string>
        
    <!-- new task fragment -->
    <string name="button_new_todo"><big><b>+</b></big></string>
    
    <!-- today fragment -->
    <string name="Today">Today</string>
    <string name="title_today_list">Today</string>
    
    <!--  empty today fragment -->
    <string name="title_empty_today"><b>What are you doing today?</b></string>
    <string name="body_empty_today">
            <p>\n1. Swipe to see your lists.</p>
            <p>\n2. Touch the sun to do it today.</p>
            <p>\n3. Check it when it is done.</p>
            <p>\n</p>
    </string>
    <string name="footer_empty_today">@string/tagline_styled</string>
    <string name="button_empty_today">See your lists -></string>
    
    <!-- new list dialog -->
    <string name="button_ok_new_list">OK</string>
    <string name="title_new_list_dialog">New List</string>
    <string name="msg_list_already_exists">You already have a list with that name.</string>
    
    <!-- TaskLists fragment -->
    <string name="template_list_status">{LIST_SIZE} tasks</string>
    <string name="button_new_takslist">+</string>
    <string name="title_tasklists">Your Lists</string>
    
    <!-- missing TaskList frame -->
    <string name="title_missing_list"><b>Add a new list</b></string>
    <string name="body_missing_list">
        <p>\n1. Type a name below.</p>
        <p>\n2. Select + button.</p>
        <p>\n3. Add some tasks.</p>
        <p>\n</p>
    </string>
    <string name="footer_missing_list">@string/tagline_styled</string>
    
    <!-- empty TaskList frame -->
    <string name="title_empty_list"><b>Add a new task</b></string>
    <string name="body_empty_list">
        <p>\n1. Type a name below.</p>
        <p>\n2. Select + button.</p>
        <p>\n3. Touch the sun to do it today.</p>
        <p>\n4. Check it when it is done.</p>
        <p>\n</p>
    </string>
    <string name="footer_empty_list">@string/tagline_styled</string>
    
    <!-- Task Details Dialog  -->
    <string name="hint_task_name_detail">Task Name</string>
    <string name="hint_task_description_detail">Task Description</string>
    <string name="label_task_description_detail"><b>Description</b></string>
    <string name="label_task_due_date_detail"><b>Due : </b></string>
    <string name="label_task_importance_detail"><b>Importance</b></string>
    <string name="msg_task_name_already_exists">A task with that name already exists.</string>
    <string name="title_due_date_dialog"><b>Due By</b></string>
    
    <!-- AbstractTaskListFragment -->
    <string-array name="toast_task_done">
	    <item>Getting stuff done.</item>
	    <item>It\'s done! Having fun?</item>
	    <item>Awesome!</item>
	    <item>Another one bites the dust.</item>
	    <item>Making it happen.</item>
	    <item>Advancing one task at a time.</item>
	    <item>Making progress.</item>
	    	    </string-array>
    <string-array name="toast_task_today">
	    <item>It\'s happening!</item>
	    <item>Today is a good day.</item>
	    <item>Today is the day.</item>
	    <item>It shall soon come to pass.</item>
	    <item>Better sooner than later.</item>
	</string-array>
    <string-array name="toast_task_not_today">
        <item>If not today, when?</item>
        <item>To do another day.</item>
        <item>Fairer weather tomorrow.</item>
        <item>Making room for the important.</item>
    </string-array>
    <string-array name="toast_task_not_done">
        <item>Second time\'s the charm.</item>
        <item>What is undone can be redone.</item>
        <item>Undone.</item>
    </string-array>
    
    <!-- task list item -->
    <string-array name="importanceStars">
        <item>&#x2605;</item>
        <item>&#x2605;&#x2605;</item>
        <item>&#x2605;&#x2605;&#x2605;</item>
        <item>&#x2605;&#x2605;&#x2605;&#x2605;</item>
        <item>&#x2605;&#x2605;&#x2605;&#x2605;&#x2605;</item>
    </string-array>
    <string name="priority_template">$PRIORITY points</string>
</resources>
