<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/missingTaskListFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:layout_marginLeft="@dimen/task_list_margin_left"
    android:layout_marginRight="@dimen/task_list_margin_right"
    android:layout_marginTop="@dimen/task_list_margin_top"
    android:layout_marginBottom="@dimen/task_list_margin_bottom"
    >
    
    <!-- when there is no task list at all (missing task list) -->
    <TextView
        android:id="@+id/titleListMissing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bodyListMissing"
        android:text="@string/title_empty_today"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/bodyListMissing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/body_empty_today"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        />
    <TextView
        android:id="@+id/footerListMissing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bodyListMissing"
        android:text="@string/footer_empty_today"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:layout_centerHorizontal="true"
        />	
</RelativeLayout>
