<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TodoActivity" >

	<android.support.v4.view.ViewPager 
	    xmlns:tools="http://schemas.android.com/tools"
	    android:id="@+id/pager"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_above="@+id/sortFlipper"
	     >
	
	    <!--
	    This title strip will display the currently visible page title, as well as the page
	    titles for adjacent pages.
	    -->
	
	    <android.support.v4.view.PagerTitleStrip
	        android:id="@+id/pager_title_strip"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:background="@color/pager_background"
	        android:paddingBottom="4dp"
	        android:paddingTop="4dp"
	        android:textColor="@color/pager_text" />
	    
	</android.support.v4.view.ViewPager>
	
	<!-- sort bar -->
	<ViewFlipper 
	    android:id="@+id/sortFlipper"
	    android:orientation="horizontal" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
	    >
	
	    <Button
	        android:id="@+id/toggleSortByPriority"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/sort_height"
	        android:text="@string/sorted_by_priority" 
	        android:layout_margin="0dp"
	        android:padding="0dp"
	        android:background="@drawable/sort_button_background"
	        />
	    
	    <Button
	        android:id="@+id/toggleSortByImportance"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/sort_height"
	        android:text="@string/sorted_by_importance" 
	        android:layout_margin="0dp"
	        android:padding="0dp"
	        android:background="@drawable/sort_button_background"
	        />
	
		<Button
	        android:id="@+id/toggleSortByDueDate"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/sort_height"
	        android:text="@string/sorted_by_due_date" 
	        android:layout_margin="0dp"
	        android:padding="0dp"
	        android:background="@drawable/sort_button_background"
	        />
	
		<Button
	        android:id="@+id/toggleSortByName"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/sort_height"
	        android:text="@string/sorted_by_name" 
	        android:layout_margin="0dp"
	        android:padding="0dp"
	        android:background="@drawable/sort_button_background"
	        />
	
	</ViewFlipper>
	
</RelativeLayout>